# Librum

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml  test_and_publish.yml
example/: file.py  learning_spanish.txt  models.py  sections.py  test_parse.py
liber/: error.py  errors.py  files.py  sections.py
librum/: errors.py  files.py  patterns.py  sections.py
tests/: conftest.py  test_files.py  test_files_definitions.py  test_files_failures.py  test_sections.py  test_sections_definition.py
