[project]
name = "librum"
version = "0.1.0"
description = "A Python framework for extracting data from structured files"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["librum"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=3.3.3",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]

[tool.black]
line-length = 76
target-version = ["py310"]
preview = true

[tool.ruff]
line-length = 76
lint.extend-select = ["I"]

